fix arraylist